<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="bencloud.tech.notes.EditorActivity"
    tools:showIn="@layout/activity_editor">

    <android.support.v7.widget.CardView
      android:id="@+id/top_card"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginEnd="8dp"
      app:cardBackgroundColor="@color/cardview_light_background"
      app:cardCornerRadius="2dp"
      app:cardUseCompatPadding="true"
      app:contentPadding="8dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent">

            <EditText
              android:id="@+id/priority"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_marginTop="8dp"
              android:layout_marginBottom="8dp"
              android:layout_marginStart="8dp"
              android:layout_marginEnd="8dp"
              android:ems="10"
              android:hint="@string/a_z"
              android:inputType="text"
              android:maxLength="1"
              android:singleLine="true"
              android:textAppearance="@style/TextAppearance.AppCompat.Body2"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintEnd_toStartOf="@+id/creation_date"
              app:layout_constraintStart_toEndOf="@+id/complete"
              app:layout_constraintTop_toBottomOf="@+id/textView10"/>

            <EditText
              android:id="@+id/complete"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_marginTop="8dp"
              android:layout_marginBottom="8dp"
              android:layout_marginStart="8dp"
              android:layout_marginEnd="8dp"
              android:ems="10"
              android:hint="done"
              android:inputType="text"
              android:maxLength="1"
              android:singleLine="true"
              android:textAppearance="@style/TextAppearance.AppCompat.Body2"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintEnd_toStartOf="@+id/priority"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/textView8"/>

            <EditText
              android:id="@+id/creation_date"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_marginTop="8dp"
              android:layout_marginBottom="8dp"
              android:layout_marginStart="8dp"
              android:layout_marginEnd="8dp"
              android:ems="10"
              android:hint="@string/yyyy_mm_dd"
              android:inputType="text"
              android:maxLength="10"
              android:singleLine="true"
              android:textAppearance="@style/TextAppearance.AppCompat.Body2"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintEnd_toStartOf="@+id/completion_date"
              app:layout_constraintStart_toEndOf="@+id/priority"
              app:layout_constraintTop_toBottomOf="@+id/textView7"
              app:layout_constraintVertical_bias="1.0"/>

            <EditText
              android:id="@+id/completion_date"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_marginTop="8dp"
              android:layout_marginBottom="8dp"
              android:layout_marginStart="8dp"
              android:layout_marginEnd="8dp"
              android:ems="10"
              android:hint="@string/yyyy_mm_dd"
              android:inputType="text"
              android:maxLength="10"
              android:selectAllOnFocus="false"
              android:singleLine="true"
              android:textAppearance="@style/TextAppearance.AppCompat.Body2"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toEndOf="@+id/creation_date"
              app:layout_constraintTop_toBottomOf="@+id/textView9"/>

            <TextView
              android:id="@+id/textView8"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="8dp"
              android:text="@string/completed"
              android:textAppearance="@style/TextAppearance.AppCompat.Body1"
              app:layout_constraintStart_toStartOf="@+id/complete"
              app:layout_constraintTop_toTopOf="parent"/>

            <TextView
              android:id="@+id/textView7"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="8dp"
              android:text="@string/created"
              android:textAppearance="@style/TextAppearance.AppCompat.Body1"
              app:layout_constraintStart_toStartOf="@+id/creation_date"
              app:layout_constraintTop_toTopOf="parent"/>

            <TextView
              android:id="@+id/textView9"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="8dp"
              android:text="@string/finished"
              android:textAppearance="@style/TextAppearance.AppCompat.Body1"
              app:layout_constraintStart_toStartOf="@+id/completion_date"
              app:layout_constraintTop_toTopOf="parent"/>

            <TextView
              android:id="@+id/textView10"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="8dp"
              android:layout_marginStart="8dp"
              android:text="@string/priority"
              android:textAppearance="@style/TextAppearance.AppCompat.Body1"
              app:layout_constraintStart_toStartOf="@+id/priority"
              app:layout_constraintTop_toTopOf="parent"/>
        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_marginTop="8dp"
      android:layout_marginBottom="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginEnd="8dp"
      app:cardBackgroundColor="@color/cardview_light_background"
      app:cardCornerRadius="2dp"
      app:contentPadding="8dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/top_card">

        <EditText
          android:id="@+id/description"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:defaultFocusHighlightEnabled="false"
          android:ems="10"
          android:gravity="start"
          android:hint="@string/write_here"
          android:inputType="textMultiLine"
          android:scrollbars="vertical"
          android:singleLine="false"
          android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>
