<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:cardview="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:animateLayoutChanges="false"
  cardview:cardBackgroundColor="@color/colorPrimary"
  cardview:cardCornerRadius="2dp"
  cardview:cardUseCompatPadding="true"
  cardview:contentPadding="0dp">

    <android.support.constraint.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:animateLayoutChanges="false">

        <android.support.v7.widget.CardView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="8dp"
          cardview:cardBackgroundColor="@color/colorPrimary"
          cardview:cardCornerRadius="2dp"
          cardview:cardElevation="2dp"
          cardview:layout_constraintBottom_toTopOf="@+id/delete"
          cardview:layout_constraintEnd_toEndOf="parent"
          cardview:layout_constraintStart_toStartOf="parent"
          cardview:layout_constraintTop_toTopOf="parent">
            <android.support.constraint.ConstraintLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent">

                <TextView
                  android:id="@+id/description"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="8dp"
                  android:layout_marginBottom="8dp"
                  android:layout_marginStart="4dp"
                  android:layout_marginEnd="8dp"
                  android:maxLines="3"
                  android:text="@string/placeholder"
                  android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
                  cardview:layout_constraintBottom_toBottomOf="parent"
                  cardview:layout_constraintEnd_toStartOf="@+id/expand"
                  cardview:layout_constraintStart_toStartOf="parent"
                  cardview:layout_constraintTop_toBottomOf="@+id/creationDate"/>
                <TextView
                  android:id="@+id/complete"
                  android:layout_width="16dp"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="4dp"
                  android:layout_marginStart="4dp"
                  android:text="@string/placeholder_short"
                  android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
                  cardview:layout_constraintStart_toStartOf="parent"
                  cardview:layout_constraintTop_toTopOf="parent"/>
                <TextView
                  android:id="@+id/priority"
                  android:layout_width="16dp"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="4dp"
                  android:layout_marginStart="8dp"
                  android:text="@string/placeholder_short"
                  android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
                  cardview:layout_constraintStart_toEndOf="@+id/complete"
                  cardview:layout_constraintTop_toTopOf="parent"/>
                <TextView
                  android:id="@+id/creationDate"
                  android:layout_width="80dp"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="4dp"
                  android:layout_marginStart="8dp"
                  android:text="yyyy-mm-dd"
                  android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
                  cardview:layout_constraintStart_toEndOf="@+id/completionDate"
                  cardview:layout_constraintTop_toTopOf="parent"/>
                <TextView
                  android:id="@+id/completionDate"
                  android:layout_width="80dp"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="4dp"
                  android:layout_marginStart="8dp"
                  android:text="yyyy-mm-dd"
                  android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
                  cardview:layout_constraintStart_toEndOf="@+id/priority"
                  cardview:layout_constraintTop_toTopOf="parent"/>
                <ImageButton
                  android:id="@+id/expand"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginBottom="4dp"
                  android:layout_marginEnd="4dp"
                  android:background="@android:color/transparent"
                  android:contentDescription="@string/expand"
                  android:scaleType="centerCrop"
                  android:tint="@color/colorIcons"
                  cardview:layout_constraintBottom_toBottomOf="parent"
                  cardview:layout_constraintEnd_toEndOf="parent"
                  cardview:srcCompat="@drawable/ic_action_more_horiz"/>
            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>
        <ImageButton
          android:id="@+id/delete"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginBottom="8dp"
          android:layout_marginEnd="16dp"
          android:background="@android:color/transparent"
          android:contentDescription="@string/delete"
          android:focusable="auto"
          android:scaleType="centerCrop"
          android:tint="@color/colorIcons"
          android:visibility="gone"
          cardview:layout_constraintBottom_toBottomOf="parent"
          cardview:layout_constraintEnd_toStartOf="@+id/edit"
          cardview:srcCompat="@drawable/ic_action_delete_forever"/>
        <ImageButton
          android:id="@+id/edit"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginBottom="8dp"
          android:layout_marginEnd="8dp"
          android:background="@android:color/transparent"
          android:contentDescription="@string/edit"
          android:focusable="auto"
          android:scaleType="centerCrop"
          android:tint="@color/colorIcons"
          android:visibility="gone"
          cardview:layout_constraintBottom_toBottomOf="parent"
          cardview:layout_constraintEnd_toEndOf="parent"
          cardview:layout_constraintTop_toTopOf="@+id/delete"
          cardview:srcCompat="@drawable/ic_action_edit"/>
    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>